--- a/changelog
+++ b/changelog
@@ -4,6 +4,10 @@ CHANGELOG
 By Ando Saabas          ando(a t)cs.ioc.ee
 ============================================
 
+Sphider 1.3.1b, release date 07-06-2006
+    
+    Security related bugfixes (Ando Saabas)
+
 
 Sphider 1.3.1, release date 21-05-2006
 
