--- a/changelog
+++ b/changelog
@@ -4,6 +4,11 @@ CHANGELOG
 By Ando Saabas          ando(a t)cs.ioc.ee
 ============================================
 
+Sphider 1.3.1c, release date 30-08-2006
+    Bug with unique word counting fixed (Adam Schneider)
+    Latvian language file added (Kaspars)
+
+
 Sphider 1.3.1b, release date 07-06-2006
     
     Security related bugfixes (Ando Saabas)
