--- a/changelog
+++ b/changelog
@@ -4,6 +4,14 @@ CHANGELOG
 By Ando Saabas          ando(a t)cs.ioc.ee
 ============================================
 
+Sphider 1.3.2, release date 03-07-2007
+    Indexing speed improvements (Ando Saabas)
+    Bug with > sign in title fixed (Ando Saabas)
+    Accent conversion bug fixed (Ando Saabas)
+    Bug with accented characters in suggest fixed (Tec)
+    Other minor bug fixes (Ando Saabas)
+    Czech language file added (Marek Èapla)
+
 Sphider 1.3.1f, release date 17-03-2007
     "Did you mean" string no longer hardcoded in templates (Ando Saabas)
     Formatting bug due to extra </div> in template fixed (Ando Saabas, Frank Carius)
