--- a/install.txt
+++ b/install.txt
@@ -1,9 +1,9 @@
 ============================================
 Sphider - a lightweight search engine in PHP
-Version 1.2.x
+Version 1.3.x
 
 Installation and usage instructions
-Ando Saabas 2005
+Ando Saabas 2005-2007
 ============================================
 
 ------------
@@ -107,12 +107,21 @@ The most common way to prevent pages from being indexed is using the robots.txt 
 root directory of the server, or adding the necessary meta tags into the page headers (for more information on how to do this, see here).
 
 * Must include / must not include string list
-A powerful option Sphider supports is defining a must include / must not include string list for a site (click on Advanced options in 
-Index screen for this). Any url not containing a string in the 'must include' list is ignored, as are urls containing strings in 'must not 
-include' list. All strings in the string list should be separated by a newline (enter). For example, to prevent a forum in your site from 
-being indexed, you might add www.yoursite.com/forum to the "must not include" list. This means that all urls containing the string will be 
-ignored and wont be indexed. Using Perl style regular expressions instead of literal strings is also supported. Every string starting with 
-a '*' in front is considered as a regular expression, so that '*/[a]+/' denotes a string with one or more a's in it.
+A powerful option Sphider supports is defining
+a must include / must not include string list for a site
+(click on Advanced options in Index screen for this). Any url containing
+a string in the 'must not include' list is ignored. Any url that does
+not contain any string in the 'must include' list is likewise ignored.
+All strings in the string list
+should be separated by a newline (enter). For example,
+to prevent a forum in your site from being indexed, you might add
+www.yoursite.com/forum to the "must not include" list. This means that
+all urls containing the string will be ignored and wont be indexed. Using
+Perl style regular expressions instead of literal strings is also
+supported. Every string starting with a '*' in front is considered as
+a regular expression, so that '*/[a]+/' denotes a string with one or more
+a's in it.
+
 
 * Ignoring links
 Sphider respect rel="nofollow" attribute in <a href..> tags, so for example the link foo.html in <a href="foo.html" rel="nofollow> is 
