--- a/changelog
+++ b/changelog
@@ -4,7 +4,14 @@ CHANGELOG
 By Ando Saabas          ando(a t)cs.ioc.ee
 ============================================
 
-Sphider 1.3.4, release date 11-12-2007
+Sphider 1.3.5, release date 13-12-2009
+	Fixed ereg warnings - PHP 6 compatible now (Ando Saabas)
+    Update Bulgarian language file (Martin Halachev)
+    
+Sphider 1.3.4, release date 29-04-2008
+	An XSS vulnerability bug fixed (Ando Saabas)
+
+Sphider 1.3.4b, release date 11-12-2007
     Bug in file download function fixed (Viorel Irimia)
     Bug with possible bold tag bleeding in result titles fixed (Ando Saabas)
     Index all does not load keyword table multiple times any  more (Ando Saabas)
